--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@project-serum/anchor": "^0.26.0",
     "@project-serum/borsh": "^0.2.5",
+    "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@solana/spl-token": "^0.4.9",
     "@solana/web3.js": "^1.98.0",
